src/antlr/JScratchParser.ts
// Generated from JScratch.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { JScratchListener } from "./JScratchListener";

export class JScratchParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly ADD_OPERATOR = 18;
	public static readonly MUL_OPERATOR = 19;
	public static readonly LOGICAL_ADD_OPERATOR = 20;
	public static readonly LOGICAL_MUL_OPERATOR = 21;
	public static readonly LOGICAL_NOT_OPERATOR = 22;
	public static readonly COMPOUND_ASSIGN_OPERATOR = 23;
	public static readonly REL_OPERATOR = 24;
	public static readonly CONSTANT = 25;
	public static readonly IDENTIFIER = 26;
	public static readonly NUMBER_CONSTANT = 27;
	public static readonly STRING_CONSTANT = 28;
	public static readonly ARRAY_SIZE = 29;
	public static readonly WS = 30;
	public static readonly MultiLineComment = 31;
	public static readonly SingleLineComment = 32;
	public static readonly RULE_entry = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_varDecl = 2;
	public static readonly RULE_constDecl = 3;
	public static readonly RULE_constExprDecl = 4;
	public static readonly RULE_varInit = 5;
	public static readonly RULE_arrayInit = 6;
	public static readonly RULE_constVarInit = 7;
	public static readonly RULE_constArrayInit = 8;
	public static readonly RULE_constExprVarInit = 9;
	public static readonly RULE_assign = 10;
	public static readonly RULE_compoundAssign = 11;
	public static readonly RULE_address = 12;
	public static readonly RULE_varAddress = 13;
	public static readonly RULE_arrayAddress = 14;
	public static readonly RULE_ref = 15;
	public static readonly RULE_procCall = 16;
	public static readonly RULE_ifStatement = 17;
	public static readonly RULE_whileStatement = 18;
	public static readonly RULE_funcDef = 19;
	public static readonly RULE_expression = 20;
	public static readonly RULE_logicalTerm = 21;
	public static readonly RULE_logicalFactor = 22;
	public static readonly RULE_simpleExpression = 23;
	public static readonly RULE_term = 24;
	public static readonly RULE_factor = 25;
	public static readonly RULE_funcCall = 26;
	public static readonly RULE_constant = 27;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"entry", "statement", "varDecl", "constDecl", "constExprDecl", "varInit", 
		"arrayInit", "constVarInit", "constArrayInit", "constExprVarInit", "assign", 
		"compoundAssign", "address", "varAddress", "arrayAddress", "ref", "procCall", 
		"ifStatement", "whileStatement", "funcDef", "expression", "logicalTerm", 
		"logicalFactor", "simpleExpression", "term", "factor", "funcCall", "constant",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "';'", "'{'", "'}'", "'var'", "','", "'const'", "'constexpr'", 
		"'='", "'['", "']'", "'('", "')'", "'if'", "'else'", "'while'", "'function'", 
		"'return'", undefined, undefined, "'|'", "'&'", "'!'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "ADD_OPERATOR", "MUL_OPERATOR", 
		"LOGICAL_ADD_OPERATOR", "LOGICAL_MUL_OPERATOR", "LOGICAL_NOT_OPERATOR", 
		"COMPOUND_ASSIGN_OPERATOR", "REL_OPERATOR", "CONSTANT", "IDENTIFIER", 
		"NUMBER_CONSTANT", "STRING_CONSTANT", "ARRAY_SIZE", "WS", "MultiLineComment", 
		"SingleLineComment",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(JScratchParser._LITERAL_NAMES, JScratchParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return JScratchParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "JScratch.g4"; }

	// @Override
	public get ruleNames(): string[] { return JScratchParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return JScratchParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(JScratchParser._ATN, this);
	}
	// @RuleVersion(0)
	public entry(): EntryContext {
		let _localctx: EntryContext = new EntryContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, JScratchParser.RULE_entry);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 56;
				this.statement();
				}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << JScratchParser.T__1) | (1 << JScratchParser.T__3) | (1 << JScratchParser.T__5) | (1 << JScratchParser.T__6) | (1 << JScratchParser.T__12) | (1 << JScratchParser.T__14) | (1 << JScratchParser.T__15) | (1 << JScratchParser.IDENTIFIER))) !== 0));
			this.state = 61;
			this.match(JScratchParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, JScratchParser.RULE_statement);
		let _la: number;
		try {
			this.state = 92;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 63;
				this.varDecl();
				this.state = 64;
				this.match(JScratchParser.T__0);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 66;
				this.constDecl();
				this.state = 67;
				this.match(JScratchParser.T__0);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 69;
				this.constExprDecl();
				this.state = 70;
				this.match(JScratchParser.T__0);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 72;
				this.assign();
				this.state = 73;
				this.match(JScratchParser.T__0);
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 75;
				this.compoundAssign();
				this.state = 76;
				this.match(JScratchParser.T__0);
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 78;
				this.procCall();
				this.state = 79;
				this.match(JScratchParser.T__0);
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 81;
				this.match(JScratchParser.T__1);
				this.state = 85;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << JScratchParser.T__1) | (1 << JScratchParser.T__3) | (1 << JScratchParser.T__5) | (1 << JScratchParser.T__6) | (1 << JScratchParser.T__12) | (1 << JScratchParser.T__14) | (1 << JScratchParser.T__15) | (1 << JScratchParser.IDENTIFIER))) !== 0)) {
					{
					{
					this.state = 82;
					this.statement();
					}
					}
					this.state = 87;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 88;
				this.match(JScratchParser.T__2);
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 89;
				this.ifStatement();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 90;
				this.whileStatement();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 91;
				this.funcDef();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varDecl(): VarDeclContext {
		let _localctx: VarDeclContext = new VarDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, JScratchParser.RULE_varDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 94;
			this.match(JScratchParser.T__3);
			this.state = 97;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				{
				this.state = 95;
				this.varInit();
				}
				break;

			case 2:
				{
				this.state = 96;
				this.arrayInit();
				}
				break;
			}
			this.state = 106;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === JScratchParser.T__4) {
				{
				{
				this.state = 99;
				this.match(JScratchParser.T__4);
				this.state = 102;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
				case 1:
					{
					this.state = 100;
					this.varInit();
					}
					break;

				case 2:
					{
					this.state = 101;
					this.arrayInit();
					}
					break;
				}
				}
				}
				this.state = 108;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constDecl(): ConstDeclContext {
		let _localctx: ConstDeclContext = new ConstDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, JScratchParser.RULE_constDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 109;
			this.match(JScratchParser.T__5);
			this.state = 112;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				{
				this.state = 110;
				this.constVarInit();
				}
				break;

			case 2:
				{
				this.state = 111;
				this.constArrayInit();
				}
				break;
			}
			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === JScratchParser.T__4) {
				{
				{
				this.state = 114;
				this.match(JScratchParser.T__4);
				this.state = 117;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
				case 1:
					{
					this.state = 115;
					this.constVarInit();
					}
					break;

				case 2:
					{
					this.state = 116;
					this.constArrayInit();
					}
					break;
				}
				}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constExprDecl(): ConstExprDeclContext {
		let _localctx: ConstExprDeclContext = new ConstExprDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, JScratchParser.RULE_constExprDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			this.match(JScratchParser.T__6);
			this.state = 125;
			this.constExprVarInit();
			this.state = 130;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === JScratchParser.T__4) {
				{
				{
				this.state = 126;
				this.match(JScratchParser.T__4);
				this.state = 127;
				this.constExprVarInit();
				}
				}
				this.state = 132;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varInit(): VarInitContext {
		let _localctx: VarInitContext = new VarInitContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, JScratchParser.RULE_varInit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(JScratchParser.IDENTIFIER);
			this.state = 136;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === JScratchParser.T__7) {
				{
				this.state = 134;
				this.match(JScratchParser.T__7);
				this.state = 135;
				this.expression();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arrayInit(): ArrayInitContext {
		let _localctx: ArrayInitContext = new ArrayInitContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, JScratchParser.RULE_arrayInit);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.match(JScratchParser.IDENTIFIER);
			this.state = 139;
			this.match(JScratchParser.T__8);
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === JScratchParser.CONSTANT) {
				{
				this.state = 140;
				this.match(JScratchParser.CONSTANT);
				}
			}

			this.state = 143;
			this.match(JScratchParser.T__9);
			this.state = 158;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === JScratchParser.T__7) {
				{
				this.state = 144;
				this.match(JScratchParser.T__7);
				this.state = 145;
				this.match(JScratchParser.T__8);
				this.state = 146;
				this.expression();
				this.state = 149;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 147;
						this.match(JScratchParser.T__4);
						this.state = 148;
						this.expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 151;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				this.state = 154;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === JScratchParser.T__4) {
					{
					this.state = 153;
					this.match(JScratchParser.T__4);
					}
				}

				this.state = 156;
				this.match(JScratchParser.T__9);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constVarInit(): ConstVarInitContext {
		let _localctx: ConstVarInitContext = new ConstVarInitContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, JScratchParser.RULE_constVarInit);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.match(JScratchParser.IDENTIFIER);
			this.state = 161;
			this.match(JScratchParser.T__7);
			this.state = 162;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constArrayInit(): ConstArrayInitContext {
		let _localctx: ConstArrayInitContext = new ConstArrayInitContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, JScratchParser.RULE_constArrayInit);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 164;
			this.match(JScratchParser.IDENTIFIER);
			this.state = 165;
			this.match(JScratchParser.T__8);
			this.state = 167;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === JScratchParser.CONSTANT) {
				{
				this.state = 166;
				this.match(JScratchParser.CONSTANT);
				}
			}

			this.state = 169;
			this.match(JScratchParser.T__9);
			this.state = 170;
			this.match(JScratchParser.T__7);
			this.state = 171;
			this.match(JScratchParser.T__8);
			this.state = 172;
			this.expression();
			this.state = 175;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 173;
					this.match(JScratchParser.T__4);
					this.state = 174;
					this.expression();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 177;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 16, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			this.state = 180;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === JScratchParser.T__4) {
				{
				this.state = 179;
				this.match(JScratchParser.T__4);
				}
			}

			this.state = 182;
			this.match(JScratchParser.T__9);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constExprVarInit(): ConstExprVarInitContext {
		let _localctx: ConstExprVarInitContext = new ConstExprVarInitContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, JScratchParser.RULE_constExprVarInit);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 184;
			this.match(JScratchParser.IDENTIFIER);
			this.state = 185;
			this.match(JScratchParser.T__7);
			this.state = 186;
			this.match(JScratchParser.CONSTANT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assign(): AssignContext {
		let _localctx: AssignContext = new AssignContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, JScratchParser.RULE_assign);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 188;
			this.address();
			this.state = 189;
			this.match(JScratchParser.T__7);
			this.state = 190;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public compoundAssign(): CompoundAssignContext {
		let _localctx: CompoundAssignContext = new CompoundAssignContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, JScratchParser.RULE_compoundAssign);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 192;
			this.address();
			this.state = 193;
			this.match(JScratchParser.COMPOUND_ASSIGN_OPERATOR);
			this.state = 194;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public address(): AddressContext {
		let _localctx: AddressContext = new AddressContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, JScratchParser.RULE_address);
		try {
			this.state = 198;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 18, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 196;
				this.varAddress();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 197;
				this.arrayAddress();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varAddress(): VarAddressContext {
		let _localctx: VarAddressContext = new VarAddressContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, JScratchParser.RULE_varAddress);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(JScratchParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public arrayAddress(): ArrayAddressContext {
		let _localctx: ArrayAddressContext = new ArrayAddressContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, JScratchParser.RULE_arrayAddress);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 202;
			this.match(JScratchParser.IDENTIFIER);
			this.state = 203;
			this.match(JScratchParser.T__8);
			this.state = 204;
			this.expression();
			this.state = 205;
			this.match(JScratchParser.T__9);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ref(): RefContext {
		let _localctx: RefContext = new RefContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, JScratchParser.RULE_ref);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 207;
			this.address();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public procCall(): ProcCallContext {
		let _localctx: ProcCallContext = new ProcCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, JScratchParser.RULE_procCall);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 209;
			this.match(JScratchParser.IDENTIFIER);
			this.state = 210;
			this.match(JScratchParser.T__10);
			this.state = 222;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << JScratchParser.T__10) | (1 << JScratchParser.LOGICAL_NOT_OPERATOR) | (1 << JScratchParser.CONSTANT) | (1 << JScratchParser.IDENTIFIER))) !== 0)) {
				{
				this.state = 211;
				this.expression();
				this.state = 216;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 19, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 212;
						this.match(JScratchParser.T__4);
						this.state = 213;
						this.expression();
						}
						}
					}
					this.state = 218;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 19, this._ctx);
				}
				this.state = 220;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === JScratchParser.T__4) {
					{
					this.state = 219;
					this.match(JScratchParser.T__4);
					}
				}

				}
			}
